Diff algorithm added

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
     crossorigin="anonymous"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/mammoth@1.4.8/mammoth.browser.min.js"></script>
-    <title>React App</title>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Code Checker</title>
 </head>
 
 <body>
